ionos/dome-wallet/wallet-creation-application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wallet-creation-application
  name: wallet-creation-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wallet-creation-application
      app.kubernetes.io/name: wallet-creation-application
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wallet-creation-application
        app.kubernetes.io/name: wallet-creation-application
    spec:
      containers:
      - name: wallet-creation-application
        image: in2kizuna/wallet-creation-application:v2.0.0
        imagePullPolicy: Always
