ionos/dome-wallet/wallet-creation-application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-creation-application
spec:
  ports:
  - name: wallet-creation-application
    targetPort: 8080
  selector:
    app.kubernetes.io/name: wallet-creation-application
